# sync-wrap

./: .dockerignore  .gitignore  Makefile  Pipfile  README.md  azure-pipelines.yml  deploy-ecs-proxies.yml  docker-compose.yml  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  ecs-proxies.yml  manifest_template.yml  mypy.ini  package-lock.json  package.json  pylint.rc  pyproject.toml  pytest.ini  setup.py
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  sbom.yml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: e2e.yml  smoketests.yml  tests.yml
docker/: hadolint.yml
docker/_shared/: Makefile
docker/apps/: .dockerignore  Dockerfile  Makefile  Pipfile  README.md  entrypoint.sh  pytest.ini
docker/apps/src/: shared
docker/apps/src/slowapp/: app.py  app_tests.py  conftest.py  main.py
docker/async-slowapp/: package-lock.json  package.json
docker/async-slowapp/src/: app.js  app.spec.js  handlers.js  main.js
docker/sync-wrap/: .mocharc.yml  Dockerfile  package-lock.json  package.json
docker/sync-wrap-async-slowapp/src/: app.slowapp.spec.js
docker/sync-wrap/src/: app.google.spec.js  app.js  app.postman.spec.js  app.slowapp.spec.js  handlers.js  main.js
e2e/: Dockerfile  Makefile  api_tests.py  conftest.py  helpers.py  pyproject.toml  pytest.ini
e2e/tests/: api_tests.py
hosted_targets/synchrotron/: README.md  synchrotron.xml
hosted_targets/synchrotron/proxies/: default.xml
hosted_targets/synchrotron/resources/hosted/: app.yaml  handlers.js  package-lock.json  package.json  server.js  server.postman.spec.js  server.slowapp.spec.js
hosted_targets/synchrotron/targets/: hosted.xml
proxies/_shared/: Makefile
proxies/async-slowapp/: .mocharc.yml  Makefile  package-lock.json  package.json
proxies/async-slowapp/apiproxy/: async-slowapp.xml
proxies/async-slowapp/apiproxy/policies/: AssignMessage.CreateResponse.xml
proxies/async-slowapp/apiproxy/proxies/: default.xml
proxies/async-slowapp/src/: app.spec.js  handlers.js  main.js  server.js  server.spec.js
proxies/live/: Makefile
proxies/live/apiproxy/: sync-wrap.xml
proxies/live/apiproxy/policies/: AssignMessage.AddPayloadToPing.xml  (+2 more)
proxies/sync-wrap/: .mocharc.yml  README.md  package-lock.json  package.json
proxies/sync-wrap/apiproxy/: sync-wrap.xml
proxies/sync-wrap/src/: app.google.spec.js  app.js  app.postman.spec.js  app.slowapp.spec.js  handlers.js  main.js  server.google.spec.js  server.js  server.postman.spec.js  server.slowapp.spec.js
proxies/synchrotron/: Makefile  README.md  package-lock.json  package.json
proxies/synchrotron/src/: handlers.js  server.js
scripts/: calculate_version.py
src/lambdas/: basic.py  basic_tests.py  conftest.py  echo.py  helpers.py  package_lambda.py  sync_async.py  sync_async_invoke_tests.py  sync_async_tests.py
src/shared/: __init__.py  aws.py
src/sync_async.egg-info/: PKG-INFO  SOURCES.txt
terraform/: main.tf
terraform/deploys/local/: Makefile  modules.tf  outputs.tf  provider.tf  test-lambda.sh  variables.tf
terraform/modules/sync-async-api/: api.tf  outputs.tf  variables.tf
(+17 files in other folders)
