[project]
python = "^3.8"


[tool.poetry]
name = "sync-wrap"
version = "0.0.1-alpha"
description = "Sync Wrap"

license = "MIT"

authors = [
    "API management"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/sync-wrap"
homepage = ""

keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.0.5"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
coverage = "^5.3"
flake8 = "^3.7.9"
black = "^19.10b0"
pip-licenses = "^2.0.1"
jinja2 = "^2.11.1"

api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.2-alpha/api_test_utils-1.1.2a0-py3-none-any.whl"}

[tool.poetry.scripts]
