[tool.poetry]
name = "sync-wrap"
version = "0.0.1-alpha"
description = "Sync Wrap"

package-mode = false

license = "MIT"

authors = [
    "API management"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/sync-wrap"
homepage = "https://github.com/NHSDigital/sync-wrap"

keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.10"
semver = "^3.0.4"
gitpython = "^3.1.44"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"
flake8 = "^7.2.0"
black = "^25.1.0"
pip-licenses = "^5.0.0"
jinja2 = "^3.1.6"
pytest-nhsd-apim = "^5.0.0"
