[tool.poetry]
name = "async-slowapp-e2e"
version = "0.1.0"
description = ""
authors = ["Matthew Mercer <matt.mercer@nhs.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
coverage = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
