[project]
python = "^3.8"

[tool.poetry]
name = "async-slowapp-e2e"
version = "0.1.0"
description = ""
authors = ["Matthew Mercer <matt.mercer@nhs.net>"]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/sync-wrap"
homepage = ""
keywords = ["nhs"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
coverage = "^5.3"

[tool.poetry.dev-dependencies]
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.0.41-alpha/api_test_utils-1.0.41a0-py3-none-any.whl"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
